[package]
name = "convertify"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
derive-getters = "0.2.0"
rocket = { version = "0.5.0-rc.2", features = ["json"] }
serde = { version = "1.0.137", features = ["derive"] } 
state = { version = "0.5.3", features = ["tls"] }
